WIP commit - minor edits

--- a/ldo-mc-vr.bib
+++ b/ldo-mc-vr.bib
@@ -244,3 +244,12 @@
   year={1970},
   institution={Division of Technical Information, US Atomic Energy Commission}
 }
+
+@article{kr18,
+  title={Assessment of the Lagrange Discrete Ordinates Equations for Three-Dimensional Neutron Transport},
+  author={Rowland, Kelly L. and Ahrens, Cory D. and Hamilton, Steven and Slaybaugh, RN},
+  journal={Nuclear Science and Engineering},
+  pages={1--20},
+  year={2018},
+  publisher={Taylor \& Francis}
+}
