I only changed the intro of problem description section as I didn't think much more was needed there; lmk if there's anything you want me to take a look at.

--- a/ldo-mc-vr.tex
+++ b/ldo-mc-vr.tex
@@ -482,7 +482,7 @@ The strength of the CADIS and \fwc\ methods for many types of problems is that a
 %%---------------------------------------------------------------------------%%
 \section{Test Cases and Calculation Parameters}
 
-In this section, we first present descriptions of the geometry and materials
+The purpose of this work is to enable the solution of real engineering problems that we cannot solve easily with current tools. Thus, we focus on test cases that exhibit extreme cases of the behaviors that challenge CADIS and \fwc. The goal of this work is to see if LDO can provide better performance than other \sn methods, noting that it may not be practical to find accurately these problems with CADIS or \fwc\ in a reasonable amount of compute time. In this section, we first present descriptions of the geometry and materials
 used in the test cases as well as why each problem was chosen. Then, we
 discuss the parameters chosen for the various deterministic and Monte Carlo
 calculations performed in this work.
@@ -490,7 +490,7 @@ calculations performed in this work.
 Deterministic solutions for the test cases using the various quadrature sets
 are provided in Rowland's earlier publication \cite{kr18}. Generally, the
 problems were chosen because they are computationally challenging due to
-streaming pathways and ray effects; the test cases are also of interest in
+streaming pathways and ray effects and these can be seen clearly in the figures the earlier publication; the test cases are also of interest in
 that they are relevant to real-world application problems. We direct the
 reader to Rowland's earlier article for full detail \cite{kr18}.
 
